--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,20 +1,23 @@
 .App {
-  height: 100vh;
-  background-color: rgb(20, 20, 20);
-  overflow: scroll;
+  min-height: 100vh;
+  background-image: url("./assets/pink-floyd-background.jpg");
+  background-size: cover;
+  background-color: #cccccc;
   text-align: center;
-  overflow: hidden;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 .container {
-  height: 100%;
+  height:100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 0 30px 0 30px;
-  color: white;
+  color: rgb(229, 245, 230);
   position: relative;
-  /* background-color: #35aee2; */
+  font-weight: 700;
 }
 
 .authed-container {
@@ -25,7 +28,41 @@
 }
 
 .header-container {
-  /* background-color: #60c657; */
+  background-color: #575ec6c9;
+  padding: 40px;
+  border-radius: 20px;
+  max-width:fit-content;
+  margin-left:auto;
+  margin-right: auto;
+  margin-top: 30px;
+}
+
+.machine-container, .mint-container {
+  margin-top: 40px;
+  background-color: #575ec6c9;
+  padding: 15px;
+  border-radius: 20px;
+  max-width:fit-content;
+  margin-left:auto;
+  margin-right: auto;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 100%;
+  bottom: 30px;
+  left: 50%;
+  margin-top: 70px;
+  background-color: #575ec6c9;
+  padding: 20px;
+  border-radius: 20px;
+  max-width:fit-content;
+  -webkit-transform: translate(-50%,0);
+  -ms-transform: translate(-50%,0);
+  transform: translate(-50%,0);
 }
 
 .header {
@@ -71,16 +108,7 @@
   margin-left: 10px;
 }
 
-.footer-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  width: 100%;
-  bottom: 0;
-  left: 0;
-  /* padding-bottom: 45px; */
-}
+
 
 .twitter-logo {
   width: 35px;
