--- a/app/src/CandyMachine/CandyMachine.css
+++ b/app/src/CandyMachine/CandyMachine.css
@@ -9,15 +9,15 @@
 }
 
 .gif-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  display: flex;
+  flex-direction: row;
   grid-gap: 1.5rem;
   justify-items: center;
   margin: 0;
   padding: 20px 0 20px 0;
 }
 
-.gif-grid .gif-item {
+.gif-item {
   display: flex;
   flex-direction: column;
   position: relative;
@@ -26,8 +26,8 @@
 }
 
 .gif-item img {
-  width: 100%;
-  height: 200px;
+  width: 400px;
+  height: 400px;
   border-radius: 10px;
   object-fit: cover;
 }
